# OpenGL-Course

./: Application pre-allocation with comments.cpp  ApplicationPreTestsFramework.cpp  CMakeLists.txt  imgui.ini
include/: IndexBuffer.h  Renderer.h  Shader.h  VertexArray.h  VertexBuffer.h  VertexBufferLayout.h  texture.h
include/tests/: Test.h  TestClearColor.h
res/shaders/: Basic.shader
src/: Application.cpp  IndexBuffer.cpp  Renderer.cpp  Shader.cpp  VertexArray.cpp  VertexBuffer.cpp  VertexBufferLayout.cpp  stb_image.cpp  texture.cpp
src/tests/: TestClearColor.cpp
